# Multi-cycle-RAG

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  cli.py  commands.md  decomposition_rag.py  pyproject.toml  rag.py  streaming_rag.py  test_rag.py  websearch.py
Documentation/: api.md  installation.md
docs/: roadmap.md  vision.md
models/: models.md
prompts/: manager.py
prompts/evaluation/: follow_up_generation.yaml  response_evaluation.yaml
prompts/generation/: initial_generation.yaml  reflexion_generation.yaml  simple_generation.yaml
prompts/synthesis/: final_synthesis.yaml
prompts/templates/: base_template.yaml
schema/: Tablesetup.surql  count_web.surql  countdocs.surql  deldocs.surql  delweb.surql  documents.surql  hybrid_search.surql  similarity_search.surql  similarity_search_web.surql  web_search.surql
src/: __init__.py
src/LanguageModels/: CohereCommandr.py
src/config/: settings.py
src/core/: exceptions.py  interfaces.py
src/data/: loader.py  processor.py
src/decomposition/: query_decomposer.py
src/embeddings/: github_embeddings.py  huggingface_embeddings.py
src/llm/: github_llm.py
src/memory/: cache.py
src/rag/: engine.py  reflexion_engine.py
src/reflexion/: evaluator.py
src/utils/: logging.py
src/vectorstore/: __init__.py  chroma_store.py  surrealdb_store.py
src/websearch/: __init__.py  google_search.py
